--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     {{content-for 'body'}}
-
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js" ></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/parkfreely.js"></script>
 
