Fix Google maps problem

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     {{content-for 'body'}}
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js" ></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDlMAH-yFrM81lzzW_CsDRKGnYpC8W0jmM&sensor=false" ></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/parkfreely.js"></script>
 
